...
        android:src="@drawable/ic_item_circle_40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_meeting_title_txt"
        style="@style/RecyclerViewTextViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/item_meeting_participants_txt"
        app:layout_constraintLeft_toRightOf="@id/item_circle_img"
        app:layout_constraintRight_toLeftOf="@id/item_delete_img_button"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_meeting_participants_txt"
...
